@@ -85,6 +85,9 @@ Release 2.7.0
 
     HDFS-7457. DatanodeID generates excessive garbage. (daryn via kihwal)
 
+    HDFS-7213. processIncrementalBlockReport performance degradation.
+    (Eric Payne via kihwal)
+
   OPTIMIZATIONS
 
   BUG FIXES
